--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^5.2.5",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-webpack-plugin": "^2.5.4",
